Modifies dictionary to map evaluations to snippets

--- a/sentiment_analysis_pipeline.ipynb
+++ b/sentiment_analysis_pipeline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -40,23 +40,23 @@
     "# initialises review dictionary\n",
     "# this will map each snippet of text (key) to the corresponding id (value)\n",
     "review_dict = {}\n",
-    "row_count = 0\n",
     "search = r'[\\n]'\n",
     "\n",
     "# opens the review file\n",
-    "with open('stanfordSentimentTreebank/dictionary.txt') as file:\n",
+    "with open('stanfordSentimentTreebank/dictionary.txt') as review_file:\n",
     "    # iterates through each row\n",
-    "    for row in file:\n",
+    "    for row in review_file:\n",
     "        string = str(row) # converts row into a string\n",
     "        split_string = string.split('|') # splits the string in two parts (snippet and id)\n",
     "\n",
-    "        # sets the first element of the string (snippet) as key\n",
-    "        key = split_string[0]\n",
-    "        # sets the second element of the string (id) as value\n",
+    "        # sets the second element of the string (id) as key\n",
     "        # snippet id is followed by \\n, which we want to strip\n",
-    "        value = re.sub(search, '', split_string[1])\n",
+    "        key = re.sub(search, '', split_string[1])\n",
+    "        # sets the first element of the string (snippet) as value\n",
+    "        value = split_string[0]\n",
     "\n",
     "        # sets key and value of dictionary entry\n",
+    "        # the dictionary has the form: {'id': 'snippet'}, where id is a number\n",
     "        review_dict[key] = value\n",
     "\n",
     "# checks dictionary length is correct\n",
@@ -66,10 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "row_count = 0\n",
+    "\n",
+    "# opens the sentiment value file\n",
+    "with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
+    "    # iterates through each row\n",
+    "    for sent_row in sentiment_file:\n",
+    "        row_count += 1\n",
+    "\n",
+    "        if row_count != 1: \n",
+    "            sentiment_split_string = sent_row.split('|')\n",
+    "\n",
+    "            id = sentiment_split_string[0] # equivalent to dictionary keys\n",
+    "            # re.sub needs to be converted into string to be used as a dictionary key\n",
+    "            new_id = str(re.sub(search, '', sentiment_split_string[1]))\n",
+    "\n",
+    "            # removes the old keys and replaces them with the corresponding sentiment value\n",
+    "            review_dict[new_id] = review_dict.pop(id)\n",
+    "            \n",
+    "# print(review_dict) # uncomment to check whether dictionary is correctly built"
+   ]
   }
  ],
  "metadata": {
