Problematic for loops

--- a/sentiment_analysis_pipeline.ipynb
+++ b/sentiment_analysis_pipeline.ipynb
@@ -11,21 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The chosen dataset, the Stanford Sentiment Treebank, stores reviews snippets in a file called `dictionary.txt`, and their respective sentiment value in `sentiment_labels.txt`. Here, I shall combine these pieces of information in a dictionary that maps reviews to values, and then convert the dictionary in a .cvs file."
+    "The chosen dataset, the Stanford Sentiment Treebank, stores reviews snippets in a file called `dictionary.txt`, and their respective sentiment value in `sentiment_labels.txt`. Here, I shall combine these pieces of information in a dictionary that maps reviews to values, and then convert the dictionary in a .csv file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +38,9 @@
     }
    ],
    "source": [
-    "# initialises review dictionary\n",
-    "# this will map each snippet of text (key) to the corresponding id (value)\n",
-    "review_dict = {}\n",
+    "# initialises review list\n",
+    "# this will contain dictionaries that map each snippet of text (value) to the corresponding id (key)\n",
+    "review_dictionaries = []\n",
     "search = r'[\\n]'\n",
     "\n",
     "# opens the review file\n",
@@ -49,28 +50,35 @@
     "        string = str(row) # converts row into a string\n",
     "        split_string = string.split('|') # splits the string in two parts (snippet and id)\n",
     "\n",
-    "        # sets the second element of the string (id) as key\n",
+    "        # sets the second element of the string as id\n",
     "        # snippet id is followed by \\n, which we want to strip\n",
-    "        key = re.sub(search, '', split_string[1])\n",
-    "        # sets the first element of the string (snippet) as value\n",
-    "        value = split_string[0]\n",
+    "        id = re.sub(search, '', split_string[1])\n",
+    "        # sets the first element of the string as snippet\n",
+    "        snippet = split_string[0]\n",
     "\n",
     "        # sets key and value of dictionary entry\n",
-    "        # the dictionary has the form: {'id': 'snippet'}, where id is a number\n",
-    "        review_dict[key] = value\n",
+    "        # the dictionary has the form: {'id': id, 'snippet': snippet}, where id is a number\n",
+    "        dictionary = {}\n",
+    "        dictionary['id'] = id\n",
+    "        dictionary['snippet'] = snippet\n",
+    "\n",
+    "        # print(dictionary)\n",
+    "\n",
+    "        review_dictionaries.append(dictionary)\n",
     "\n",
     "# checks dictionary length is correct\n",
-    "print(len(review_dict))\n",
-    "# print(review_dict) # uncomment to check dictionary is correctly built"
+    "print(len(review_dictionaries))\n",
+    "# print(review_dictionaries) # uncomment to check dictionary is correctly built"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "row_count = 0\n",
+    "sentiment_list = []\n",
     "\n",
     "# opens the sentiment value file\n",
     "with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
@@ -81,14 +89,53 @@
     "        if row_count != 1: \n",
     "            sentiment_split_string = sent_row.split('|')\n",
     "\n",
-    "            id = sentiment_split_string[0] # equivalent to dictionary keys\n",
     "            # re.sub needs to be converted into string to be used as a dictionary key\n",
-    "            new_id = str(re.sub(search, '', sentiment_split_string[1]))\n",
+    "            sentiment_dict = {}\n",
+    "            sentiment_dict['score'] = str(re.sub(search, '', sentiment_split_string[1]))\n",
+    "            sentiment_dict['id'] = sentiment_split_string[0]\n",
     "\n",
-    "            # removes the old keys and replaces them with the corresponding sentiment value\n",
-    "            review_dict[new_id] = review_dict.pop(id)\n",
+    "            sentiment_list.append(sentiment_dict)\n",
     "            \n",
-    "# print(review_dict) # uncomment to check whether dictionary is correctly built"
+    "# print(sentiment_list) # uncomment to check whether dictionary is correctly built"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dict_review in review_dictionaries:\n",
+    "    for dict_score in sentiment_list:\n",
+    "        if dict_review['id'] == dict_score['id']:\n",
+    "            dict_review.update(dict_score)\n",
+    "\n",
+    "print(dict_review)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will now convert our dictionary into a .cvs file, which I will call `data.cvs`. The file will display the sentiment score on the first column and the associated snippet on the second column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declares columns names\n",
+    "csv_columns = ['id','snippet', 'score']\n",
+    "\n",
+    "# decides on file name and extension\n",
+    "csv_file = \"data.csv\"\n",
+    "\n",
+    "with open(csv_file, 'w') as csvfile:\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=csv_columns)\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(review_dictionaries)"
    ]
   }
  ],
