Correctly builds dictionary

--- a/sentiment_analysis_pipeline.ipynb
+++ b/sentiment_analysis_pipeline.ipynb
@@ -16,24 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "import csv"
+    "import csv\n",
+    "# import collections\n",
+    "import operator\n",
+    "from operator import itemgetter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "239232\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [21], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m row_count \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m: \n\u001b[1;32m     33\u001b[0m     sentiment_split_string \u001b[38;5;241m=\u001b[39m sent_row\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m|\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 35\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(re\u001b[38;5;241m.\u001b[39msub(search, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, sentiment_split_string[\u001b[38;5;241m1\u001b[39m]))\n\u001b[1;32m     36\u001b[0m     id2 \u001b[38;5;241m=\u001b[39m sentiment_split_string[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m id2 \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mid\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -42,6 +49,8 @@
     "# this will contain dictionaries that map each snippet of text (value) to the corresponding id (key)\n",
     "review_dictionaries = []\n",
     "search = r'[\\n]'\n",
+    "\n",
+    "row_count = 0\n",
     "\n",
     "# opens the review file\n",
     "with open('stanfordSentimentTreebank/dictionary.txt') as review_file:\n",
@@ -59,10 +68,22 @@
     "        # sets key and value of dictionary entry\n",
     "        # the dictionary has the form: {'id': id, 'snippet': snippet}, where id is a number\n",
     "        dictionary = {}\n",
-    "        dictionary['id'] = id\n",
+    "        dictionary['id'] = int(id)\n",
     "        dictionary['snippet'] = snippet\n",
     "\n",
-    "        # print(dictionary)\n",
+    "        with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
+    "        # iterates through each row\n",
+    "            for sent_row in sentiment_file:\n",
+    "                row_count += 1\n",
+    "\n",
+    "                if row_count != 1: \n",
+    "                    sentiment_split_string = sent_row.split('|')\n",
+    "                    \n",
+    "                    score = str(re.sub(search, '', sentiment_split_string[1]))\n",
+    "                    id2 = sentiment_split_string[0]\n",
+    "\n",
+    "                    if id2 == id:\n",
+    "                        dictionary['score'] = score\n",
     "\n",
     "        review_dictionaries.append(dictionary)\n",
     "\n",
@@ -73,11 +94,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "row_count = 0\n",
+    "# declares columns names\n",
+    "csv_columns = ['id','snippet']\n",
+    "\n",
+    "# decides on file name and extension\n",
+    "csv_file = \"data.csv\"\n",
+    "\n",
+    "with open(csv_file, 'w') as csvfile:\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=csv_columns)\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(review_dictionaries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'operator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [18], line 20\u001b[0m\n\u001b[1;32m     16\u001b[0m             sentiment_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(sentiment_split_string[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     18\u001b[0m             sentiment_list\u001b[38;5;241m.\u001b[39mappend(sentiment_dict)\n\u001b[0;32m---> 20\u001b[0m sorted_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(sentiment_list, key\u001b[38;5;241m=\u001b[39moperator\u001b[38;5;241m.\u001b[39mitemgetter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m), reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(sorted_list)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'operator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "sentiment_list = []\n",
     "\n",
     "# opens the sentiment value file\n",
@@ -92,18 +143,33 @@
     "            # re.sub needs to be converted into string to be used as a dictionary key\n",
     "            sentiment_dict = {}\n",
     "            sentiment_dict['score'] = str(re.sub(search, '', sentiment_split_string[1]))\n",
-    "            sentiment_dict['id'] = sentiment_split_string[0]\n",
+    "            sentiment_dict['id'] = int(sentiment_split_string[0])\n",
     "\n",
     "            sentiment_list.append(sentiment_dict)\n",
+    "\n",
+    "sorted_list = sorted(sentiment_list, key=operator.itemgetter('id'), reverse=True)\n",
+    "print(sorted_list)\n",
     "            \n",
     "# print(sentiment_list) # uncomment to check whether dictionary is correctly built"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m dict_review \u001b[38;5;129;01min\u001b[39;00m review_dictionaries:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m dict_score \u001b[38;5;129;01min\u001b[39;00m sentiment_list:\n\u001b[0;32m----> 3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m dict_review[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m dict_score[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      4\u001b[0m             dict_review\u001b[38;5;241m.\u001b[39mupdate(dict_score)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(dict_review)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "for dict_review in review_dictionaries:\n",
     "    for dict_score in sentiment_list:\n",
@@ -122,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
