--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -16,23 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import csv"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "239232\n"
+     ]
+    }
+   ],
    "source": [
     "# initialises review dictionary\n",
     "# this will map each snippet of text (key) to the corresponding id (value)\n",
-    "review_dict = {}\n",
+    "review_list = []\n",
     "search = r'[\\n]'\n",
     "\n",
     "# opens the review file\n",
@@ -42,19 +49,66 @@
     "        string = str(row) # converts row into a string\n",
     "        split_string = string.split('|') # splits the string in two parts (snippet and id)\n",
     "\n",
+    "        review_dict = {}\n",
     "        # sets the second element of the string (id) as key\n",
     "        # snippet id is followed by \\n, which we want to strip\n",
-    "        key = re.sub(search, '', split_string[1])\n",
+    "        review_dict['snippet'] = int(re.sub(search, '', split_string[1]))\n",
     "        # sets the first element of the string (snippet) as value\n",
-    "        value = split_string[0]\n",
+    "        review_dict['id'] = split_string[0]\n",
     "\n",
-    "        # sets key and value of dictionary entry\n",
-    "        # the dictionary has the form: {'id': 'snippet'}, where id is a number\n",
-    "        review_dict[key] = value\n",
+    "        review_list.append(review_dict)\n",
     "\n",
     "# checks dictionary length is correct\n",
-    "print(len(review_dict))\n",
+    "print(len(review_list))\n",
     "# print(review_dict) # uncomment to check dictionary is correctly built"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "239232\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentiment_list = []\n",
+    "\n",
+    "# opens the sentiment value file\n",
+    "with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
+    "    # iterates through each row\n",
+    "    for sent_row in sentiment_file:\n",
+    "        sentiment_dict = {}\n",
+    "\n",
+    "        sentiment_split_string = sent_row.split('|')\n",
+    "\n",
+    "        id = sentiment_split_string[0] # equivalent to dictionary keys\n",
+    "        # re.sub needs to be converted into string to be used as a dictionary key\n",
+    "        score = str(re.sub(search, '', sentiment_split_string[1]))\n",
+    "\n",
+    "        # removes the old keys and replaces them with the corresponding sentiment value\n",
+    "        sentiment_dict['id'] = id\n",
+    "        sentiment_dict['score'] = score\n",
+    "\n",
+    "        sentiment_list.append(sentiment_dict)\n",
+    "\n",
+    "# slices list to exclude first element\n",
+    "sentiment_list = sentiment_list[1:]\n",
+    "# print(row_count)\n",
+    "print(len(sentiment_list))            \n",
+    "# print(sentiment_list) # uncomment to check whether dictionary is correctly built"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have a dictionary that maps sentiment scores (keys) to snippets (values). The .cvs file that we want to build will need a list of dictionaries as an input, therefore we'll have to split the dictionary using the .key() and .value() methods, and then append the newly created dictionaries to a list, `dict_list`."
    ]
   },
   {
@@ -62,27 +116,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "row_count = 0\n",
-    "\n",
-    "# opens the sentiment value file\n",
-    "with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
-    "    # iterates through each row\n",
-    "    for sent_row in sentiment_file:\n",
-    "        row_count += 1\n",
-    "\n",
-    "        if row_count != 1: \n",
-    "            sentiment_split_string = sent_row.split('|')\n",
-    "\n",
-    "            id = sentiment_split_string[0] # equivalent to dictionary keys\n",
-    "            # re.sub needs to be converted into string to be used as a dictionary key\n",
-    "            new_id = str(re.sub(search, '', sentiment_split_string[1]))\n",
-    "\n",
-    "            # removes the old keys and replaces them with the corresponding sentiment value\n",
-    "            review_dict[new_id] = review_dict.pop(id)\n",
-    "            \n",
-    "# print(review_dict) # uncomment to check whether dictionary is correctly built"
-   ]
+   "source": []
   }
  ],
  "metadata": {
