--- a/dataset_file_creation.ipynb
+++ b/dataset_file_creation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,22 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "239232\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final_dictionary = {k: v for k, v in zip(snippets, scores)}\n",
-    "\n",
-    "print(len(final_dictionary))\n",
-    "# print(final_dictionary)"
+    "final_dictionary = {k: v for k, v in zip(snippets, scores)}"
    ]
   },
   {
@@ -223,34 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'keys'",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (334241310.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [8], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictWriter(csvfile, fieldnames\u001b[38;5;241m=\u001b[39mcsv_columns)\n\u001b[1;32m      9\u001b[0m writer\u001b[38;5;241m.\u001b[39mwriteheader()\n\u001b[0;32m---> 10\u001b[0m writer\u001b[38;5;241m.\u001b[39mwriterows(final_dictionary)\n",
-      "File \u001b[0;32m~/miniforge3/envs/tensf-environment/lib/python3.9/csv.py:157\u001b[0m, in \u001b[0;36mDictWriter.writerows\u001b[0;34m(self, rowdicts)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=155'>156</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwriterows\u001b[39m(\u001b[39mself\u001b[39m, rowdicts):\n\u001b[0;32m--> <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=156'>157</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwriter\u001b[39m.\u001b[39;49mwriterows(\u001b[39mmap\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dict_to_list, rowdicts))\n",
-      "File \u001b[0;32m~/miniforge3/envs/tensf-environment/lib/python3.9/csv.py:147\u001b[0m, in \u001b[0;36mDictWriter._dict_to_list\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=144'>145</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_dict_to_list\u001b[39m(\u001b[39mself\u001b[39m, rowdict):\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=145'>146</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mextrasaction \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraise\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=146'>147</a>\u001b[0m         wrong_fields \u001b[39m=\u001b[39m rowdict\u001b[39m.\u001b[39;49mkeys() \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfieldnames\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=147'>148</a>\u001b[0m         \u001b[39mif\u001b[39;00m wrong_fields:\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=148'>149</a>\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mdict contains fields not in fieldnames: \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///Users/caterinabonan/miniforge3/envs/tensf-environment/lib/python3.9/csv.py?line=149'>150</a>\u001b[0m                              \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([\u001b[39mrepr\u001b[39m(x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m wrong_fields]))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'keys'"
+      "\u001b[0;36m  Cell \u001b[0;32mIn [1], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    csvFile.write(\"%s, %s\\n\" % (key, final_dictionary[key]))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
-    "# declares columns names\n",
-    "csv_columns = ['snippet', 'score']\n",
-    "\n",
     "# decides on file name and extension\n",
     "csv_file = \"dataset.csv\"\n",
     "\n",
-    "with open(csv_file, 'w') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=csv_columns)\n",
-    "        writer.writeheader()\n",
-    "        writer.writerows(final_dictionary)"
+    "with open(csv_file, 'w') as csvFile:\n",
+    "        for key in final_dictionary.keys():\n",
+    "                csvFile.write(\"%s, %s\\n\" % (key, final_dictionary[key]))"
    ]
   }
  ],
