--- a/dataset_file_creation.ipynb
+++ b/dataset_file_creation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,22 +39,19 @@
     }
    ],
    "source": [
-    "# initialises review dictionary\n",
-    "# this will map each snippet of text (key) to the corresponding id (value)\n",
+    "# creates review list that will contain dictionaries that map id to snippet\n",
     "review_list = []\n",
     "search = r'[\\n]'\n",
     "\n",
     "# opens the review file\n",
     "with open('stanfordSentimentTreebank/dictionary.txt') as review_file:\n",
-    "    # iterates through each row\n",
     "    for row in review_file:\n",
     "        string = str(row) # converts row into a string\n",
     "        split_string = string.split('|') # splits the string in two parts (snippet and id)\n",
     "\n",
     "        review_dict = {}\n",
     "        # sets the second element of the string (id) as key\n",
-    "        # snippet id is followed by \\n, which we want to strip\n",
-    "        review_dict['id'] = int(re.sub(search, '', split_string[1]))\n",
+    "        review_dict['id'] = int(re.sub(search, '', split_string[1])) # id is followed by \\n, which we want to strip\n",
     "        # sets the first element of the string (snippet) as value\n",
     "        review_dict['value'] = split_string[0]\n",
     "\n",
@@ -75,14 +72,13 @@
     "    \n",
     "    sorted_dict_list.append(dict)\n",
     "\n",
-    "# checks dictionary length is correct\n",
     "print(len(review_list))\n",
-    "print(len(sorted_dict_list)) # uncomment to check dictionary is correctly built"
+    "print(len(sorted_dict_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,11 +91,11 @@
     }
    ],
    "source": [
+    "# creates sentiment list that will contain dictionaries that map id to score\n",
     "sentiment_list = []\n",
     "\n",
     "# opens the sentiment value file\n",
     "with open('stanfordSentimentTreebank/sentiment_labels.txt') as sentiment_file:\n",
-    "    # iterates through each row\n",
     "    for x, sent_row in enumerate(sentiment_file):\n",
     "        sentiment_dict = {}\n",
     "\n",
@@ -107,7 +103,6 @@
     "            sentiment_split_string = sent_row.split('|')\n",
     "\n",
     "            id = int(sentiment_split_string[0]) # equivalent to dictionary keys\n",
-    "            # print(len(id))\n",
     "            # re.sub needs to be converted into string to be used as a dictionary key\n",
     "            score = str(re.sub(search, '', sentiment_split_string[1]))\n",
     "\n",
@@ -129,16 +124,13 @@
     "    \n",
     "    sorted_sentiment_list.append(dict)\n",
     "\n",
-    "# slices list to exclude first element\n",
-    "# sentiment_list = sentiment_list[1:]\n",
-    "# print(row_count)\n",
     "print(len(sentiment_list))            \n",
-    "print(len(sorted_sentiment_list)) # uncomment to check whether dictionary is correctly built"
+    "print(len(sorted_sentiment_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,8 +143,7 @@
     }
    ],
    "source": [
-    "# extract scores from sorted_sentiment_list, stores it in list\n",
-    "\n",
+    "# extract scores from sorted_sentiment_list, stores them in a list\n",
     "scores = []\n",
     "\n",
     "for dict in sorted_sentiment_list:\n",
@@ -167,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,8 +171,7 @@
     }
    ],
    "source": [
-    "# extract snippets from sorted_dict_list, stores in a list\n",
-    "\n",
+    "# extract snippets from sorted_dict_list, stores them in a list\n",
     "snippets = []\n",
     "\n",
     "for dict in sorted_dict_list:\n",
@@ -196,10 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# zips the two lists into a dictionary\n",
     "final_dictionary = {k: v for k, v in zip(snippets, scores)}"
    ]
   },
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
