--- a/dataset_file_creation.ipynb
+++ b/dataset_file_creation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,17 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# decides on file name and extension\n",
     "csv_file = \"dataset.csv\"\n",
     "\n",
-    "with open(csv_file, 'w') as csvFile:\n",
-    "        for key in final_dictionary.keys():\n",
-    "                csvFile.write(\"%s, %s\\n\" % (key, final_dictionary[key]))"
+    "with open(csv_file, 'w', newline='') as csvFile:\n",
+    "    csvwriter = csv.writer(csvFile)\n",
+    "    csvwriter.writerow(['snippet', 'score'])\n",
+    "    for key, val in final_dictionary.items():\n",
+    "        csvwriter.writerow([key, val])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -222,7 +231,7 @@
    "hash": "f5335eeea33ebf6696add4ab17cc9c72a1358f0fa3ca762c2d5eed5a49847338"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tensf-environment')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -236,9 +245,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.0"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
